2007-10-11  Allan Sandfeld Jensen  <sandfeld@kde.org>

Reviewed by Maciej and Eric.

         Implement CSS selector combinators nondeterministic matching.
         Fixes http://bugs.webkit.org/show_bug.cgi?id=3428

         * css/CSSStyleSelector.cpp:
         (WebCore::CSSStyleSelector::matchRulesForList):
         (WebCore::CSSStyleSelector::checkSelector): Split the function and make the second part recursive
         (WebCore::CSSStyleSelector::checkOneSelector): Handle pseodo-elements rules and hoveractive quirks
         here instead of in checkSelector.
         * css/CSSStyleSelector.h:



Canonical link: https://commits.webkit.org/20529@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@26539 268f45cc-cd09-0410-ab3c-d52691b4dbfc